--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Fri Jul 25 17:17:27 BST 2008 Daniel P. Berrange <berrange@redhat.com>
+
+	* src/xml.c: Remove now unused c-ctype.h include
+
 Fri Jul 25 15:21:27 BST 2008 Daniel P. Berrange <berrange@redhat.com>
 
 	* src/xml.c, src/xml.h: Take a virConnectPtr object as param
