--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+Mon Jul 28 16:04:58 CEST 2008 Daniel Veillard <veillard@redhat.com>
+
+	* src/domain_conf.[ch] src/openvz_conf.[ch] src/openvz_driver.c:
+	  patch from Evgeniy Sokolov doing the OpenVZ xml refactoring,
+	  still needs to be ported to the new XML parsing code but
+	  implements the new format.
+
 Mon Jul 28 14:50:55 CEST 2008 Daniel Veillard <veillard@redhat.com>
 
 	* src/qemu_driver.c: patch from Guido Günther to make sure create
