--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Tue Jul 29 10:41:30 CEST 2008 Daniel Veillard <veillard@redhat.com>
+
+	* src/openvz_conf.c: fix compilation with new XPath interface
+	  signatures
+	* configure.in: build OpenVZ and LXC support by default
+
 Mon Jul 28 16:04:58 CEST 2008 Daniel Veillard <veillard@redhat.com>
 
 	* src/domain_conf.[ch] src/openvz_conf.[ch] src/openvz_driver.c:
