The new generic domain re-factor introduced a small regression into the drive handling code.  In particular, if you had a section of XML like:
    <disk type='file' device='cdrom'>
      <target dev='hdc' bus='ide'/>
      <readonly/>
    </disk>

This used to work with older libvirt, but now fails.  This is because we are
actually passing the literal string (null) to the qemu command-line, which qemu
barfs on.  This patch fixes it up by making it blank, which allows qemu to
continue on it's merry way.

Signed-off-by: Chris Lalancette <clalance@redhat.com>

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+Tue Jul 29 14:08:00 CEST 2008 Chris Lalancette <clalance@redhat.com>
+
+	* src/qemu_conf.c: fix empty CD-ROM source device section
+	* tests/qemuxml2argvtest.c,
+	tests/qemuxml2argvdata/qemuxml2argv-disk-cdrom-empty.xml,
+	tests/qemuxml2argvdata/qemuxml2argv-disk-cdrom-empty.args: Add test
+	for empty source CD-ROM device section
+		
 Tue Jul 29 10:41:30 CEST 2008 Daniel Veillard <veillard@redhat.com>
 
 	* src/openvz_conf.c: fix compilation with new XPath interface
