--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Wed Jul 30 10:45:41 CEST 2008 Daniel Veillard <veillard@redhat.com>
+
+	* qemud/qemud.c: patch from Guido Günther fixing the place where
+	  config file check is done.
+
 Tue Jul 29 14:08:00 CEST 2008 Chris Lalancette <clalance@redhat.com>
 
 	* src/qemu_conf.c: fix empty CD-ROM source device section
@@ -5,7 +10,7 @@ Tue Jul 29 14:08:00 CEST 2008 Chris Lalancette <clalance@redhat.com>
 	tests/qemuxml2argvdata/qemuxml2argv-disk-cdrom-empty.xml,
 	tests/qemuxml2argvdata/qemuxml2argv-disk-cdrom-empty.args: Add test
 	for empty source CD-ROM device section
-		
+
 Tue Jul 29 10:41:30 CEST 2008 Daniel Veillard <veillard@redhat.com>
 
 	* src/openvz_conf.c: fix compilation with new XPath interface
