* src/storage_backend_logical.c: patch from David Lively fixing   small differences of behaviour for 'lvs' and 'vgs' on SLES Daniel

--- a/AUTHORS
+++ b/AUTHORS
@@ -47,6 +47,7 @@ Patches have also been contributed by:
   Kaitlin Rupert       <kaitlin@linux.vnet.ibm.com>
   Evgeniy Sokolov      <evg@openvz.org>
   John Levon           <john.levon@sun.com>
+  David Lively         <dlively@virtualiron.com>
 
   [....send patches to get your name here....]
 
