--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Wed Jul 30 10:51:12 CEST 2008 Daniel Veillard <veillard@redhat.com>
+
+	* src/storage_backend_logical.c: patch from David Lively fixing
+	  small differences of behaviour for 'lvs' and 'vgs' on SLES
+
 Wed Jul 30 10:45:41 CEST 2008 Daniel Veillard <veillard@redhat.com>
 
 	* qemud/qemud.c: patch from Guido Günther fixing the place where
