Adding Charles Duffy as author, Daniel

--- a/AUTHORS
+++ b/AUTHORS
@@ -48,6 +48,7 @@ Patches have also been contributed by:
   Evgeniy Sokolov      <evg@openvz.org>
   John Levon           <john.levon@sun.com>
   David Lively         <dlively@virtualiron.com>
+  Charles Duffy        <Charles_Duffy@messageone.com>
 
   [....send patches to get your name here....]
 
