--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+Fri Aug  1 08:40:48 CEST 2008 Daniel Veillard <veillard@redhat.com>
+
+	* docs/formatdomain.html docs/formatdomain.html.in docs/libvirt-api.xml
+	  docs/libvirt-refs.xml docs/html/libvirt-libvirt.html src/libvirt.c:
+	  fixed somedocs and API entry point descriptions as suggested by
+	  Charles Duffy and regenerated the API descriptions.
+
 Fri Aug  1 08:22:08 CEST 2008 Daniel Veillard <veillard@redhat.com>
 
 	* src/qemu_driver.c: apply patch from Charles Duffy fixing erro
