--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+Fri Aug  1 15:28:00 BST 2008 Daniel P. Berrange <berrange@redhat.com>
+
+	'virsh edit' and related commands
+	* src/virsh.c: Implement 'virsh edit', 'virsh net-edit' and
+	  'virsh pool-edit' commands.  These edit the XML for domains,
+	  networks and storage pools respectively, and are the
+	  equivalent of doing 'virsh dumpxml; vi foo.xml; virsh define'
+	* src/Makefile.am, src/.cvsignore: Auto-generate the net-edit
+	  and pool-edit commands.
+	* docs/virsh.pod: Updated the documentation.
+
 Fri Aug  1 15:15:00 BST 2008 Daniel P. Berrange <berrange@redhat.com>
 
 	* src/domain_conf.c: Ensure new VM state is initialized to
