xend_internal.c, sexpr.c: const-correctness fixes

--- a/ChangeLog
+++ b/ChangeLog
@@ -17,6 +17,7 @@ Fri Aug  1 15:15:00 BST 2008 Daniel P. Berrange <berrange@redhat.com>
 Fri Aug  1 15:51:04 CEST 2008 Jim Meyering  <meyering@redhat.com>
 
 	* virsh.c: more const-correctness fixes
+	* xend_internal.c, sexpr.c: Likewise.
 
 Fri Aug  1 13:57:00 BST 2008 Daniel P. Berrange <berrange@redhat.com>
 
