--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Mon Aug  4 15:30:02 JST 2008 Atsushi SAKAI      <sakaia@jp.fujitsu.com>
+
+	* src/xend_internal.c: Replace TAB to space.
+
 Fri Aug  1 15:28:00 BST 2008 Richard W.M. Jones <rjones@redhat.com>
 
 	'virsh edit' and related commands
