--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Tue Aug  5 12:51:11 CEST 2008 Daniel Veillard <veillard@redhat.com>
+
+	* src/openvz_conf.c src/openvz_conf.h src/openvz_driver.c: patch
+	  from Evgeniy Sokolov saving the UUID when creating or defining
+	  a domain.
+
 Tue Aug  5 10:43:42 CEST 2008 Jim Meyering  <meyering@redhat.com>
 
 	make distclean: remove generated source files
