Recently upstream Xen added support for having xvd devices > 16.  For the most part, this doesn't really concern libvirt, since for things like attach and detach we just pass it through and let xend worry about whether it is supported or not.  The one place this breaks down is in the stats collecting code, where we need to figure out the device number so we can go digging in /sys for the statistics.
To remedy this, I've re-written xenLinuxDomainDeviceID() to use regular
expressions to figure out the device number from the name.  The major advantage
is that now xenLinuxDomainDeviceID() looks fairly identical to
tools/python/xen/util/blkif.py (in the Xen sources), so that adding additional
devices in the future should be much easier.  It also reduces the size of the
code, and, in my opinion, the code complexity.

With this patch in place, I was able to get block statistics both on older style
devices (/dev/xvda) and on the new, expanded devices (/dev/xvdaa).

Signed-off-by: Chris Lalancette <clalance@redhat.com>

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Tue Aug  5 18:36:00 CEST 2008 Chris Lalancette <clalance@redhat.com>
+	* src/stats_linux.c tests/statstest.c: Update the parsing of disks for
+	  xen block statistics.  In particular, add support for > 16 xvd devices
+	  recently put into upstream Xen, and fix up the test suite to fix some
+	  wrong tests and add a couple more.
+	
 Tue Aug  5 12:51:11 CEST 2008 Daniel Veillard <veillard@redhat.com>
 
 	* src/openvz_conf.c src/openvz_conf.h src/openvz_driver.c: patch
