With the recent refactoring of the domain code, plus the changes with the Xend code, a couple of bugs were introduced into the attach-disk and attach-interface functionality.  This patch fixes 3 bugs:
1)  In xenDaemonAttachDevice(), there is a switch statement to determine which
of the xenDaemonFormatSxpr{Disk,Net} functions to call.  Unfortunately, the case
statements are all missing the corresponding "break", so we always fall-through
to the default error case.  This patch just adds the appropriate break statements.

2)  (minor) In xenDaemonDomainDefineXML (that's a mouthful!), there is a stray
"fprintf".  This is now converted to a proper virXendError().

3)  xenDaemonFormatSxpr{Disk,Net} were adding an extra (device to the front of
the sexpr expressions that xend did not expect (this is Xend on RHEL 5.2).
Because of this, the attaches would fail.  The patch fixes this by removing the
(device from the front, which makes attach-disk and attach-interface work again.

Signed-off-by: Chris Lalancette <clalance@redhat.com>

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+Tue Aug  5 18:43:00 CEST 2008 Chris Lalancette <clalance@redhat.com>
+	* src/xend_internal.c: Fix three bugs related to virsh attach-disk: 
+	  a) make sure to break in the xenDaemonAttachDevice() in the switch
+	  b) convert a stray fprintf to a virXendError()
+	  c) remove an additional "(device" on the front of the sexpr
+	  expression passed to xend.  This actually fixes virsh attach-disk
+	  and virsh attach-interface work with Xen again
+	  
 Tue Aug  5 18:36:00 CEST 2008 Chris Lalancette <clalance@redhat.com>
 	* src/stats_linux.c tests/statstest.c: Update the parsing of disks for
 	  xen block statistics.  In particular, add support for > 16 xvd devices
