DanB pointed out that my sexpr xend_internal patch from yesterday broke one of the regression tests.  The problem is that the xenDaemonFormatSxpr{Disk,Net} functions are shared between domain creation time and attaching disk time. Unfortunately, though, Xend expects something different during these two times.  During domain creation time, it wants the "(device" in front of the sexpr, while during attach time it does not.  To remedy this situation, I added a flag to these two functions to differentiate between these two modes.  With this patch in place, all of the regression tests pass.
Signed-off-by: Chris Lalancette <clalance@redhat.com>

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+Wed Aug  6 13:24:00 CEST 2008 Chris Lalancette <clalance@redhat.com>
+	* src/xend_internal.c: Oops.  My bug fix from yesterday broke the
+	  regressions suite.  We do actually need "(device" on the front of
+	  the sexpr, but only if we are first creating the domain, not when
+	  we are attaching a new disk.  This patch fixes it by adding a flag
+	  that we check, and allows the regression suite to pass.
+	
 Tue Aug  5 18:43:00 CEST 2008 Chris Lalancette <clalance@redhat.com>
 	* src/xend_internal.c: Fix three bugs related to virsh attach-disk: 
 	  a) make sure to break in the xenDaemonAttachDevice() in the switch
