--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Wed Aug  7 13:30:44 CEST 2008 Jim Meyering <meyering@redhat.com>
+
+	complete the MinGW inet_pton portability fix
+	* gnulib/m4/inet_pton.m4: New file.  Required for MinGW.
+	* gnulib/m4/gnulib-comp.m4: Regenerate via gnulib-tool.
+
 Tue Aug  6 13:30:44 CEST 2008 Jim Meyering  <meyering@redhat.com>
 
 	fix failing "make syntax-check"
