--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Tue Aug 12 17:30:50 JST 2008 Atsushi SAKAI <sakaia@jp.fujitsu.com>
+
+	* src/domain_conf.h src/qemu_driver.c: name changing of
+	  stdin, stdout, stderr to add _fd for compilation on MinGW
+
 Tue Aug 12 17:20:36 JST 2008 Atsushi SAKAI <sakaia@jp.fujitsu.com>
 
 	* src/domain.conf.c src/network_conf.c src/util.c src/virsh.c
